[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
pdfium = "0.10.4"
iced = { version = "0.14.0", features = ["image", "tokio"] }
window-vibrancy = "0.7.1"
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSThread", "NSGeometry"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "std",
    "objc2-core-foundation",
    "NSApplication",
    "NSGraphics",
    "NSResponder",
    "NSView",
    "NSVisualEffectView",
    "NSWindow",
] }
